--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </style>
 <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@3.4.1/cerulean/bootstrap.min.css" media="all" />
 <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@unicorn-fail/drupal-bootstrap-styles@0.0.2/dist/3.1.1/7.x-3.x/drupal-bootstrap-cerulean.min.css" media="all" />
-<link rel="shortcut icon" href="https://gst.calculatorsaustralia.com.au/sites/all/themes/bootstrap_calcau/favicon.ico" type="image/vnd.microsoft.icon" />
+<link rel="shortcut icon" href="https://github.com/ibommahd/nzgst/assets/128987269/ba6d5cce-0254-47cc-a193-4313e850bde2" type="image/vnd.microsoft.icon" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({
