--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="container">
     <div class="navbar-header">
               <a class="logo navbar-btn pull-left" href="/" title="Home">
-          <img src="https://gst.calculatorsaustralia.com.au/sites/default/files/calculators-australia-logo-32.png" alt="Home" />
+          <img src="https://github.com/ibommahd/nzgst/assets/128987269/f939e48d-110e-48d4-b8c1-2f7e82b18603" alt="Home" />
         </a>
       
               <a class="name navbar-brand" href="/" title="Home">GST Calculator</a>
