--- a/index.html
+++ b/index.html
@@ -113,17 +113,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <style>
 .gst_nz { display: inline-block; height: 280px; margin: 0 auto; }
 </style>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- calcAU - GST others - responsive -->
-<ins class="adsbygoogle gst_nz"
-     style="display:block"
-     data-ad-client="ca-pub-3681251289972506"
-     data-ad-slot="4391502549"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 <br>
 </div>
 </div>
@@ -163,17 +152,6 @@ $200 + 15% = $230, however $230 - 15% is NOT equal $200, actually it's $195.5!</
 <div class="row">
 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 <br>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- calcAU - GST others - responsive -->
-<ins class="adsbygoogle gst_nz"
-     style="display:block"
-     data-ad-client="ca-pub-3681251289972506"
-     data-ad-slot="4391502549"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 <br>
 <p>Sometimes numbers are not so pretty, so why do all this manual work when you can enter the amount into this <strong>NZ GST Calculator</strong> and get all the calculations at once! Enjoy!</p>
 </div>
@@ -184,22 +162,6 @@ $200 + 15% = $230, however $230 - 15% is NOT equal $200, actually it's $195.5!</
 
       
   <hr>
-<div class="row">
-<h3 class="text-center">Check Our Other Calculators:</h3>
-<ul class="list-inline text-center">
-  <li><a href="//mortgage.calculatorsaustralia.com.au">Mortgage Calculator</a></li>
-  <li><a href="//borrowing.calculatorsaustralia.com.au">Borrowing Calculator</a></li>
-  <li><a href="//stampduty.calculatorsaustralia.com.au">Stamp Duty Calculator</a></li>
-  <li><a href="//salary.calculatorsaustralia.com.au">Salary Calculator</a></li>
-  <li><a href="//tax.calculatorsaustralia.com.au">Tax Calculator</a></li>
-  <li><a href="//savings.calculatorsaustralia.com.au">Savings Calculator</a></li>
-  <li><a href="//carloan.calculatorsaustralia.com.au">Car Loan Calculator</a></li>
-  <li><a href="//creditcard.calculatorsaustralia.com.au">Credit Card Calculator</a></li>
-  <li><a href="//percentage.calculatorsaustralia.com.au">Percentage Calculator</a></li>
-  <li><a href="http://bmicalc.com.au" target="_blank">BMI Calculator</a></li>
-  <li><a href="//gst.calculatorsaustralia.com.au">GST Calculator</a></li>
-</ul>
-</div>
 </section>
   </div>
     </section>
@@ -213,7 +175,7 @@ $200 + 15% = $230, however $230 - 15% is NOT equal $200, actually it's $195.5!</
     <section id="block-block-22" class="block block-block clearfix">
 
       
-  <p style="text-align: center;">2023 © <a title="Calculators Australia" href="//calculatorsaustralia.com.au">Calculators Australia</a> | <a title="About Us" href="//calculatorsaustralia.com.au/about-us">About Us</a> | <a title="Contact Us" href="//calculatorsaustralia.com.au/contact-us">Contact Us</a></p>
+  <p style="text-align: center;">2023 © <a title="GST Calculator NZ" href="/nzgst">GST Calculator NZ</a> | <a title="About Us" href="//nzgst/about.html">About Us</a> | <a title="Contact Us" href="//nzgst/contact.html">Contact Us</a></p>
 </section>
   </div>
   </footer>
