--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ $200 + 15% = $230, however $230 - 15% is NOT equal $200, actually it's $195.5!</
     <section id="block-block-22" class="block block-block clearfix">
 
       
-  <p style="text-align: center;">2023 © <a title="GST Calculator NZ" href="/nzgst">GST Calculator NZ</a> | <a title="About Us" href="//nzgst/about.html">About Us</a> | <a title="Contact Us" href="//nzgst/contact.html">Contact Us</a></p>
+  <p style="text-align: center;">2023 © <a title="GST Calculator NZ" href="/nzgst">GST Calculator NZ</a> | <a title="About Us" href="/nzgst/about.html">About Us</a> | <a title="Contact Us" href="/nzgst/contact.html">Contact Us</a></p>
 </section>
   </div>
   </footer>
