--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta name="description" content="Calculate GST in New Zealand with this simple &amp; accurate GST Calculator. Optimised for bulk inclusive/exclusive GST tax calculations..." />
 <meta name="keywords" content="gst calculator new zealand, nz, calculate, tax, accountant" />
 <link rel="canonical" href="https://gst.calculatorsaustralia.com.au/nz" />
-<meta property="og:site_name" content="GST Calculator" />
+<meta property="og:site_name" content="GST Calculator NZ" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://gst.calculatorsaustralia.com.au/nz" />
 <meta property="og:title" content="GST Calculator - New Zealand (NZ)" />
@@ -35,6 +35,15 @@
   <style>
 @import url("https://gst.calculatorsaustralia.com.au/modules/system/system.base.css?rto6wz");
 </style>
+  <div class="menu xs-hide sm-hide" itemscope itemtype="https://schema.org/SiteNavigationElement">
+<ul>
+<li><a title="Home" itemprop="url" href="/FONT/">Home</a></li>
+<li><a title="About Us" itemprop="url" href="/FONT/about.html" target="_blank">About Us</a></li>
+<li><a title="Contact Us" itemprop="url" href="/FONT/contact.html" target="_blank">Contact Us</a></li>
+<li><a title="Privacy" itemprop="url" href="/FONT/privacy.html" target="_blank">Privacy</a></li>
+<li><a title="Terms" itemprop="url" href="/FONT/terms.html" target="_blank">Terms</a></li>
+</ul>
+</div>
 <style>
 @import url("https://gst.calculatorsaustralia.com.au/modules/field/theme/field.css?rto6wz");
 @import url("https://gst.calculatorsaustralia.com.au/modules/node/node.css?rto6wz");
