--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <div id="skip-link">
     <a href="#main-content" class="element-invisible element-focusable">Skip to main content</a>
   </div>
-<div class="menu xs-hide sm-hide" itemscope itemtype="https://schema.org/SiteNavigationElement">
+<p style="text-align: center;"><div class="menu xs-hide sm-hide" itemscope itemtype="https://schema.org/SiteNavigationElement">
 <ul>
 <li><a title="Home" itemprop="url" href="/FONT/">Home</a></li>
 <li><a title="About Us" itemprop="url" href="/FONT/about.html" target="_blank">About Us</a></li>
@@ -75,7 +75,7 @@
 <li><a title="Privacy" itemprop="url" href="/FONT/privacy.html" target="_blank">Privacy</a></li>
 <li><a title="Terms" itemprop="url" href="/FONT/terms.html" target="_blank">Terms</a></li>
 </ul>
-</div>
+</div></P>
     <div class="region region-page-top">
     <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KDRTWZ"
