--- a/index.html
+++ b/index.html
@@ -69,11 +69,7 @@
   </div>
 <p style="text-align: center;"><div class="menu xs-hide sm-hide" itemscope itemtype="https://schema.org/SiteNavigationElement">
 <ul>
-<li><a title="Home" itemprop="url" href="/FONT/">Home</a></li>
-<li><a title="About Us" itemprop="url" href="/FONT/about.html" target="_blank">About Us</a></li>
-<li><a title="Contact Us" itemprop="url" href="/FONT/contact.html" target="_blank">Contact Us</a></li>
-<li><a title="Privacy" itemprop="url" href="/FONT/privacy.html" target="_blank">Privacy</a></li>
-<li><a title="Terms" itemprop="url" href="/FONT/terms.html" target="_blank">Terms</a></li>
+<li><a title="Home" itemprop="url" href="/FONT/">Home</a></li> <li><a title="About Us" itemprop="url" href="/FONT/about.html" target="_blank">About Us</a></li> <li><a title="Contact Us" itemprop="url" href="/FONT/contact.html" target="_blank">Contact Us</a></li> <li><a title="Privacy" itemprop="url" href="/FONT/privacy.html" target="_blank">Privacy</a></li> <li><a title="Terms" itemprop="url" href="/FONT/terms.html" target="_blank">Terms</a></li>
 </ul>
 </div></P>
     <div class="region region-page-top">
