--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <img src="https://github.com/ibommahd/nzgst/assets/128987269/f939e48d-110e-48d4-b8c1-2f7e82b18603" alt="Home" />
         </a>
       
-              <a class="name navbar-brand" href="/" title="Home">GST Calculator</a>
+              <a class="name navbar-brand" href="/nzgst" title="Home">GST Calculator NZ</a>
       
           </div>
 
