--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://gst.calculatorsaustralia.com.au/nz" />
 <meta property="og:title" content="GST Calculator - New Zealand (NZ)" />
-<meta property="og:description" content="GST is a 15% tax added to the price of most goods and services in New Zealand, including most imported goods and some imported services. Since Goods and Services Tax was introduced, thousands of Kiwis have to calculate the amount of GST to add to the price of goods or services or calculate how much GST is included in the price to claim tax credits for any GST included in the price of goods, services or anything else acquired for use in carrying on the business." />
+<meta property="og:description" content="GST is a 15% tax added to the cost of most things we buy in New Zealand, like goods and services. It applies to items made in New Zealand and those imported from other countries. Ever since GST was introduced, many people in New Zealand have to figure out how much GST they need to add to the price of things they sell or buy. They also need to calculate the GST included in the price to get tax credits for business expenses." />
 <meta name="dcterms.title" content="GST Calculator - New Zealand (NZ)" />
 <meta name="dcterms.creator" content="admin" />
-<meta name="dcterms.description" content="GST is a 15% tax added to the price of most goods and services in New Zealand, including most imported goods and some imported services. Since Goods and Services Tax was introduced, thousands of Kiwis have to calculate the amount of GST to add to the price of goods or services or calculate how much GST is included in the price to claim tax credits for any GST included in the price of goods, services or anything else acquired for use in carrying on the business." />
+<meta name="dcterms.description" content="GST is a 15% tax added to the cost of most things we buy in New Zealand, like goods and services. It applies to items made in New Zealand and those imported from other countries. Ever since GST was introduced, many people in New Zealand have to figure out how much GST they need to add to the price of things they sell or buy. They also need to calculate the GST included in the price to get tax credits for business expenses." />
 <meta name="dcterms.language" content="en" />
   <title>NZ GST Calculator - New Zealand</title>
   <style>
