--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <span property="dc:title" content="GST Calculator - New Zealand (NZ)" class="rdf-meta element-hidden"></span><span property="sioc:num_replies" content="0" datatype="xsd:integer" class="rdf-meta element-hidden"></span>      </header>
     <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><div class="row">
 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-<p class="lead"><strong>GST</strong> is a 15% tax added to the price of most goods and services in New Zealand, including most imported goods and some imported services.</p>
+<p class="lead"><strong>GST</strong>strong> which stands for Goods and Services Tax, is a 15% tax that is added to the price of many things you buy in New Zealand. This includes most items that are imported from other countries, as well as some services that are brought in from outside New Zealand.</p>
 <p>Since Goods and Services Tax was introduced, thousands of Kiwis have to calculate the amount of GST to add to the price of goods or services or calculate how much GST is included in the price to claim tax credits for any GST included in the price of goods, services or anything else acquired for use in carrying on the business.</p>
 <br>
 <style>
