--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><div class="row">
 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 <p class="lead"><strong>GST</strong>strong> which stands for Goods and Services Tax, is a 15% tax that is added to the price of many things you buy in New Zealand. This includes most items that are imported from other countries, as well as some services that are brought in from outside New Zealand.</p>
-<p>Since Goods and Services Tax was introduced, thousands of Kiwis have to calculate the amount of GST to add to the price of goods or services or calculate how much GST is included in the price to claim tax credits for any GST included in the price of goods, services or anything else acquired for use in carrying on the business.</p>
+<p>Ever since Goods and Services Tax (GST) was introduced, many people in New Zealand (Kiwis) have to figure out how much GST they need to add to the price of goods or services. They also need to calculate how much GST is already included in the price, so they can claim tax credits for any GST included in the cost of goods, services, or anything else they acquire to use for their business.</p>
 <br>
 <style>
 .gst_nz { display: inline-block; height: 280px; margin: 0 auto; }
