--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 <div class="col-md-7">
 <h3>How to use GST Calculator NZ?</h3>
-<p>When you enter the number into "Amount" field you can see both outputs on the same page:</p>
+<p>When you type a number in the "Amount" box, you will see two results on the same page:</p>
 <ul>
-<li>the amount of GST to add to the price and GST inclusive price, AND</li>
-<li>how much GST is included in the price and GST exclusive price.</li>
+<li>The extra amount of GST to be added to the price and the total price with GST included.</li>
+<li>The portion of the price that is the GST amount and the price without the GST.</li>
 </ul>
-<p>You can change GST percentage when/if GST changes or if you want to calculate GST for other countries. For example, <a href="/">Australian GST</a> (10%) or Malaysian GST (6%).</p>
+<p>You can also adjust the GST percentage if it changes or if you want to calculate GST for different countries, like Australian GST (10%) or Malaysian GST (6%).</p>
 <h2>GST Calculations</h2>
 <p>How to calculate GST in New Zealand? When adding 15% to the price is relatively easy (just multiply the amount by 1.15), reverse GST calculations are quite tricky:</p>
 <ul>
