--- a/index.html
+++ b/index.html
@@ -132,11 +132,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </ul>
 <p>You can also adjust the GST percentage if it changes or if you want to calculate GST for different countries, like Australian GST (10%) or Malaysian GST (6%).</p>
 <h2>GST Calculations</h2>
-<p>How to calculate GST in New Zealand? When adding 15% to the price is relatively easy (just multiply the amount by 1.15), reverse GST calculations are quite tricky:</p>
+<p>How to calculate GST in New Zealand? Adding 15% to the price is simple (just multiply the amount by 1.15). But if you want to know how much GST was included in the price or find the price without GST, it can be a bit tricky:</p>
 <ul>
-<li>To figure out how much GST was included in the price multiply the GST-inclusive price by 3 then divide by 23 ($230*3/23=$30);</li>
-<li>To work out the price without GST you have to divide the amount by 1.15 ($230/1.15=$200)</li>
-</ul>
+<p>To find out how much GST was included in the price, you need to follow these steps:
+
+<li>Multiply the GST-inclusive price by 3.</li>
+Then, divide the result by 23.
+For example, if the GST-inclusive price is $230, the calculation would be: $230 * 3 / 23 = $30.
+To calculate the price without GST, follow this step:
+
+<li>Divide the original amount by 1.15.</li>
+For example, if the original price is $230, the calculation would be: $230 / 1.15 = $200.
+These calculations will help you understand the GST portion in the total price or determine the price before adding GST.</p>
 <blockquote>
 <p>Avoid most common mistake when using percentages:<br>
 $200 + 15% = $230, however $230 - 15% is NOT equal $200, actually it's $195.5!</p>
