--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ To calculate the price without GST, follow this step:
 For example, if the original price is $230, the calculation would be: $230 / 1.15 = $200.
 These calculations will help you understand the GST portion in the total price or determine the price before adding GST.</p>
 <blockquote>
-<p>Avoid most common mistake when using percentages:<br>
+<p>Don't make the most common mistakes when dealing with percentages:<br>
 $200 + 15% = $230, however $230 - 15% is NOT equal $200, actually it's $195.5!</p>
 </blockquote>
 <!-- <img class="center-block" src="/sites/default/files/gst-calculator.png" alt="gst calculator"> -->
