--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ $200 + 15% = $230, however $230 - 15% is NOT equal $200, actually it's $195.5!</
 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 <br>
 <br>
-<p>Sometimes numbers are not so pretty, so why do all this manual work when you can enter the amount into this <strong>NZ GST Calculator</strong> and get all the calculations at once! Enjoy!</p>
+<p>Don't stress over complicated numbers. Instead, use the NZ GST Calculator! Just enter the amount, and it will do all the calculations for you in a snap. Have fun!</p>
 </div>
 </div></div></div></div>    </article>
 
