--- a/about.html
+++ b/about.html
@@ -14,18 +14,9 @@
 <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@3.4.1/cerulean/bootstrap.min.css" media="all" />
 <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@unicorn-fail/drupal-bootstrap-styles@0.0.2/dist/3.1.1/7.x-3.x/drupal-bootstrap-cerulean.min.css" media="all" />
 <link rel="shortcut icon" href="https://github.com/ibommahd/nzgst/assets/128987269/ba6d5cce-0254-47cc-a193-4313e850bde2" type="image/vnd.microsoft.icon" />
-<meta name="description" content="Calculate GST in New Zealand with this simple &amp; accurate GST Calculator. Optimised for bulk inclusive/exclusive GST tax calculations..." />
-<meta name="keywords" content="gst calculator new zealand, nz, calculate, tax, accountant" />
-<meta property="og:site_name" content="GST Calculator NZ" />
-<meta property="og:type" content="article" />
-<meta property="og:url" content="https://gst.calculatorsaustralia.com.au/nz" />
-<meta property="og:title" content="GST Calculator - New Zealand (NZ)" />
-<meta property="og:description" content="GST is a 15% tax added to the cost of most things we buy in New Zealand, like goods and services. It applies to items made in New Zealand and those imported from other countries. Ever since GST was introduced, many people in New Zealand have to figure out how much GST they need to add to the price of things they sell or buy. They also need to calculate the GST included in the price to get tax credits for business expenses." />
-<meta name="dcterms.title" content="GST Calculator - New Zealand (NZ)" />
 <meta name="dcterms.creator" content="admin" />
-<meta name="dcterms.description" content="GST is a 15% tax added to the cost of most things we buy in New Zealand, like goods and services. It applies to items made in New Zealand and those imported from other countries. Ever since GST was introduced, many people in New Zealand have to figure out how much GST they need to add to the price of things they sell or buy. They also need to calculate the GST included in the price to get tax credits for business expenses." />
 <meta name="dcterms.language" content="en" />
-  <title>NZ GST Calculator - New Zealand</title>
+  <title>About Us</title>
   <style>
 @import url("https://gst.calculatorsaustralia.com.au/modules/system/system.base.css?rto6wz");
 </style>
@@ -102,7 +93,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><div class="row">
 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 <p class="lead"><strong>GST</strong>strong> which stands for Goods and Services Tax, is a 15% tax that is added to the price of many things you buy in New Zealand. This includes most items that are imported from other countries, as well as some services that are brought in from outside New Zealand.</p>
-<p>Ever since Goods and Services Tax (GST) was introduced, many people in New Zealand (Kiwis) have to figure out how much GST they need to add to the price of goods or services. They also need to calculate how much GST is already included in the price, so they can claim tax credits for any GST included in the cost of goods, services, or anything else they acquire to use for their business.</p>
 <br>
 <div class="col-md-7">
 
