--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <span property="dc:title" content="GST Calculator - New Zealand (NZ)" class="rdf-meta element-hidden"></span><span property="sioc:num_replies" content="0" datatype="xsd:integer" class="rdf-meta element-hidden"></span>      </header>
     <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><div class="row">
 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-<p class="lead"><strong>GST</strong>strong> which stands for Goods and Services Tax, is a 15% tax that is added to the price of many things you buy in New Zealand. This includes most items that are imported from other countries, as well as some services that are brought in from outside New Zealand.</p>
+<p class="lead"><strong>GST</strong> which stands for Goods and Services Tax, is a 15% tax that is added to the price of many things you buy in New Zealand. This includes most items that are imported from other countries, as well as some services that are brought in from outside New Zealand.</p>
 <p>Ever since Goods and Services Tax (GST) was introduced, many people in New Zealand (Kiwis) have to figure out how much GST they need to add to the price of goods or services. They also need to calculate how much GST is already included in the price, so they can claim tax credits for any GST included in the cost of goods, services, or anything else they acquire to use for their business.</p>
 <br>
 <style>
@@ -176,7 +176,7 @@ $200 + 15% = $230, however $230 - 15% is NOT equal $200, actually it's $195.5!</
     <section id="block-block-22" class="block block-block clearfix">
 
       
-  <p style="text-align: center;">2023 © <a title="GST Calculator NZ" href="/nzgst">GST Calculator NZ</a> | <a title="About Us" href="/nzgst/about.html">About Us</a> | <a title="Contact Us" href="/nzgst/contact.html">Contact Us</a></p>
+  <p style="text-align: center;">2023 © <a title="GST Calculator NZ" href="/nzgst">GST Calculator NZ</a> | <a title="About Us" href="/nzgst/about.html">About Us</a> | <a title="Contact Us" href="/nzgst/contact.html">Contact Us</a>|<a title="Privacy Policy" href="/nzgst/privacy.html">Privacy Policy</a>|<a title="Terms and Condition" href="/nzgst/terms.html">Terms & Condition</a></p>
 </section>
   </div>
   </footer>
