--- a/about.html
+++ b/about.html
@@ -92,7 +92,33 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <span property="dc:title" content="GST Calculator - New Zealand (NZ)" class="rdf-meta element-hidden"></span><span property="sioc:num_replies" content="0" datatype="xsd:integer" class="rdf-meta element-hidden"></span>      </header>
     <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><div class="row">
 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-<p class="lead"><strong>GST</strong>strong> which stands for Goods and Services Tax, is a 15% tax that is added to the price of many things you buy in New Zealand. This includes most items that are imported from other countries, as well as some services that are brought in from outside New Zealand.</p>
+<p class="lead"><span style="color: #000000;">At GST Calculator New Zealand, we are here to make your life easier when it comes to calculating Goods and Services Tax (GST). Our user-friendly website provides a simple and efficient way to determine GST for your business transactions.</span>
+
+<span style="color: #000000;"><strong>Why Choose GST Calculator New Zealand?</strong></span>
+<ul>
+ 	<li><span style="color: #000000;">Easy to Use: Our calculator is designed with simplicity in mind. You don't need to be a math whiz to use it! Just input the necessary details, and we'll handle the rest.</span></li>
+ 	<li><span style="color: #000000;">Accurate Results: Accuracy is our top priority. You can trust our calculator to give you precise GST calculations every time.</span></li>
+ 	<li><span style="color: #000000;">Time-Saving: Say goodbye to manual calculations and save valuable time with our instant GST results.</span></li>
+ 	<li><span style="color: #000000;">Always Accessible: Whether you're on your computer, tablet, or smartphone, our website is available 24/7, so you can calculate GST whenever and wherever you need it.</span></li>
+ 	<li><span style="color: #000000;">Free of Charge: Yes, you read that right! Our GST Calculator is completely free to use. No hidden fees or subscriptions.</span></li>
+</ul>
+<span style="color: #000000;"><strong>How to Use:</strong></span>
+
+<span style="color: #000000;">Using our GST Calculator is a breeze. Just follow these simple steps:</span>
+<ol>
+ 	<li><span style="color: #000000;">Enter the Amount: Type in the total amount of your transaction.</span></li>
+ 	<li><span style="color: #000000;">Choose the GST Rate: Select the applicable GST rate from the options provided.</span></li>
+ 	<li><span style="color: #000000;">Get Instant Result: Click the "Calculate" button, and you'll receive the GST amount and the total including GST in a flash!</span></li>
+</ol>
+<span style="color: #000000;"><strong>Our Mission:</strong></span>
+
+<span style="color: #000000;">Our mission at GST Calculator New Zealand is to provide a reliable and user-friendly tool that helps businesses and individuals calculate GST with ease. We strive to simplify financial processes and empower our users to make informed decisions effortlessly.</span>
+
+<span style="color: #000000;"><strong>Contact Us:</strong></span>
+
+<span style="color: #000000;">Got any questions, suggestions, or feedback? We'd love to hear from you! Please feel free to reach out to our friendly support team via email or through the contact form on our website. <strong><span style="color: #0000ff;"><a style="color: #0000ff;" href="/nzgst/contact.html" target="_blank" rel="noopener">Click Here</a></span></strong></span>
+
+<span style="color: #000000;">Thank you for choosing GST Calculator New Zealand! Let's make GST calculations a breeze together.</span></p>
 <br>
 <div class="col-md-7">
 
