--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     
     <section class="col-sm-12">
                   <a id="main-content"></a>
-                    <h1 class="page-header">About Us</h1>
+                    <center><h1 class="page-header">About Us</h1></center>
                                                           <div class="region region-content">
     <section id="block-system-main" class="block block-system clearfix">
 
