--- a/privacy.html
+++ b/privacy.html
@@ -92,33 +92,52 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <span property="dc:title" content="GST Calculator - New Zealand (NZ)" class="rdf-meta element-hidden"></span><span property="sioc:num_replies" content="0" datatype="xsd:integer" class="rdf-meta element-hidden"></span>      </header>
     <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><div class="row">
 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-<p class="lead"><span style="color: #000000;">At GST Calculator New Zealand, we are here to make your life easier when it comes to calculating Goods and Services Tax (GST). Our user-friendly website provides a simple and efficient way to determine GST for your business transactions.</span>
-
-<span style="color: #000000;"><strong>Why Choose GST Calculator New Zealand?</strong></span>
-<ul>
- 	<li><span style="color: #000000;">Easy to Use: Our calculator is designed with simplicity in mind. You don't need to be a math whiz to use it! Just input the necessary details, and we'll handle the rest.</span></li>
- 	<li><span style="color: #000000;">Accurate Results: Accuracy is our top priority. You can trust our calculator to give you precise GST calculations every time.</span></li>
- 	<li><span style="color: #000000;">Time-Saving: Say goodbye to manual calculations and save valuable time with our instant GST results.</span></li>
- 	<li><span style="color: #000000;">Always Accessible: Whether you're on your computer, tablet, or smartphone, our website is available 24/7, so you can calculate GST whenever and wherever you need it.</span></li>
- 	<li><span style="color: #000000;">Free of Charge: Yes, you read that right! Our GST Calculator is completely free to use. No hidden fees or subscriptions.</span></li>
-</ul>
-<span style="color: #000000;"><strong>How to Use:</strong></span>
-
-<span style="color: #000000;">Using our GST Calculator is a breeze. Just follow these simple steps:</span>
+<p style="text-align: center;"><span style="color: #800000;"><strong>Privacy Policy for GST Calculator New Zealand Website</strong></span></p>
+<span style="color: #000000;">At GST Calculator New Zealand, we value your privacy and are committed to protecting your personal information. This Privacy Policy is designed to help you understand how we collect, use, disclose, and safeguard your data when you use our website.</span>
 <ol>
- 	<li><span style="color: #000000;">Enter the Amount: Type in the total amount of your transaction.</span></li>
- 	<li><span style="color: #000000;">Choose the GST Rate: Select the applicable GST rate from the options provided.</span></li>
- 	<li><span style="color: #000000;">Get Instant Result: Click the "Calculate" button, and you'll receive the GST amount and the total including GST in a flash!</span></li>
+ 	<li><span style="color: #000000;"><strong><span style="color: #800000;">What Information We Collect</span>:</strong> When you visit our website, we may collect certain information from you, such as:</span></li>
 </ol>
-<span style="color: #000000;"><strong>Our Mission:</strong></span>
+<ul>
+ 	<li><span style="color: #000000;">Personal Information: Your name, email address, and any other information you provide voluntarily when contacting us or using our services.</span></li>
+ 	<li><span style="color: #000000;">Usage Information: Details about how you use our website, including your IP address, browser type, device information, and browsing patterns.</span></li>
+</ul>
+&nbsp;
+<ol start="2">
+ 	<li><span style="color: #000000;"><span style="color: #800000;"><strong>How We Use Your Information</strong></span>: We use the information we collect for the following purposes:</span></li>
+</ol>
+<ul>
+ 	<li><span style="color: #000000;">Providing Services: To offer you our GST calculator tool and other relevant services.</span></li>
+ 	<li><span style="color: #000000;">Communication: To respond to your inquiries, feedback, and provide updates about our website.</span></li>
+ 	<li><span style="color: #000000;">Improvements: To enhance and optimize our website based on user preferences and feedback.</span></li>
+</ul>
+&nbsp;
+<ol start="3">
+ 	<li><span style="color: #000000;"><strong><span style="color: #800000;">Sharing Your Information:</span></strong> We respect your privacy and will not sell, trade, or share your personal information with third parties for marketing purposes. However, we may share your information in the following cases:</span></li>
+</ol>
+<ul>
+ 	<li><span style="color: #000000;">With Service Providers: We may use trusted third-party service providers to assist us in operating our website and services. These providers are obligated to keep your information confidential.</span></li>
+ 	<li><span style="color: #000000;">Legal Obligations: We may disclose your information when required by law or to protect our rights and safety.</span></li>
+</ul>
+&nbsp;
+<ol start="4">
+ 	<li><span style="color: #000000;"><span style="color: #800000;"><strong>Cookies and Tracking Technologies:</strong></span> We may use cookies and similar tracking technologies to improve your experience on our website. These tools help us understand how you interact with our site, remember your preferences, and analyze usage patterns.</span></li>
+</ol>
+&nbsp;
 
-<span style="color: #000000;">Our mission at GST Calculator New Zealand is to provide a reliable and user-friendly tool that helps businesses and individuals calculate GST with ease. We strive to simplify financial processes and empower our users to make informed decisions effortlessly.</span>
-
-<span style="color: #000000;"><strong>Contact Us:</strong></span>
-
-<span style="color: #000000;">Got any questions, suggestions, or feedback? We'd love to hear from you! Please feel free to reach out to our friendly support team via email or through the contact form on our website. <strong><span style="color: #0000ff;"><a style="color: #0000ff;" href="/nzgst/contact.html" target="_blank" rel="noopener">Click Here</a></span></strong></span>
-
-<span style="color: #000000;">Thank you for choosing GST Calculator New Zealand! Let's make GST calculations a breeze together.</span></p>
+<span style="color: #000000;"><span style="color: #800000;"><strong>5. Your Choices and Control</strong></span>: You have the right to:</span>
+<ul>
+ 	<li><span style="color: #000000;">Access and Update: Access, update, or correct your personal information by contacting us.</span></li>
+ 	<li><span style="color: #000000;">Opt-Out: You can opt-out of receiving marketing communications from us by following the unsubscribe instructions in our emails.</span></li>
+</ul>
+&nbsp;
+<ol start="6">
+ 	<li><span style="color: #000000;"><span style="color: #800000;"><strong>Data Security</strong></span>: We take appropriate measures to protect your data from unauthorized access, alteration, or disclosure. However, please note that no method of transmission over the internet or electronic storage is entirely secure.</span></li>
+ 	<li><span style="color: #000000;"><span style="color: #800000;"><strong>Links to Other Websites</strong></span>: Our website may contain links to external sites. We are not responsible for the privacy practices or content of those sites. Please review the privacy policies of any third-party websites you visit.</span></li>
+ 	<li><span style="color: #000000;"><span style="color: #800000;"><strong>Children's Privacy</strong></span>: Our services are not intended for children under 13 years of age. We do not knowingly collect or maintain personal information from anyone under 13.</span></li>
+ 	<li><span style="color: #000000;"><span style="color: #800000;"><strong>Changes to This Policy</strong></span>: We may update this Privacy Policy from time to time. Any changes will be posted on this page, and the "Last Updated" date will reflect the most recent revision.</span></li>
+ 	<li><span style="color: #000000;"><span style="color: #800000;"><strong>Contact Us</strong></span>: If you have any questions or concerns about this Privacy Policy, please contact us at <a href="/nzgst/contact.html/">Here</a></span></li>
+</ol>
+<span style="color: #000000;">By using GST Calculator New Zealand's website, you agree to the terms of this Privacy Policy.</span>
 <br>
 <div class="col-md-7">
 
@@ -147,7 +166,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   <footer class="footer container">
       <div class="region region-footer">
-    <section id="block-block-22" class="block block-block clearfix">
 
       
   <p style="text-align: center;">2023 © <a title="GST Calculator NZ" href="/nzgst">GST Calculator NZ</a> | <a title="About Us" href="/nzgst/about.html">About Us</a> | <a title="Contact Us" href="/nzgst/contact.html">Contact Us</a>|<a title="Privacy Policy" href="/nzgst/privacy.html">Privacy Policy</a>|<a title="Terms and Condition" href="/nzgst/terms.html">Terms & Condition</a></p>
